output/mygrammarParser.java
// $ANTLR 3.5 /Users/Anya/github/compiler-theory/mygrammar.g 2013-02-15 02:04:23

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class mygrammarParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARGS", "ASSIGN", "CHAR", "COMMA", 
		"DECS", "DIGIT", "DIV", "EQ", "EXPR", "GT", "GTE", "ID", "INCLS", "LBRACE", 
		"LPAREN", "LT", "LTE", "MAIN", "MINUS", "MOD", "NEQ", "NUMBER", "PLUS", 
		"RBRACE", "RPAREN", "SEMICOLON", "STMTS", "STRING", "TIMES", "WS", "'#include'", 
		"'char'", "'else'", "'if'", "'int'", "'main'", "'output'", "'outputc'", 
		"'print'", "'read'", "'readc'", "'return'", "'while'"
	};
	public static final int EOF=-1;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int ARGS=4;
	public static final int ASSIGN=5;
	public static final int CHAR=6;
	public static final int COMMA=7;
	public static final int DECS=8;
	public static final int DIGIT=9;
	public static final int DIV=10;
	public static final int EQ=11;
	public static final int EXPR=12;
	public static final int GT=13;
	public static final int GTE=14;
	public static final int ID=15;
	public static final int INCLS=16;
	public static final int LBRACE=17;
	public static final int LPAREN=18;
	public static final int LT=19;
	public static final int LTE=20;
	public static final int MAIN=21;
	public static final int MINUS=22;
	public static final int MOD=23;
	public static final int NEQ=24;
	public static final int NUMBER=25;
	public static final int PLUS=26;
	public static final int RBRACE=27;
	public static final int RPAREN=28;
	public static final int SEMICOLON=29;
	public static final int STMTS=30;
	public static final int STRING=31;
	public static final int TIMES=32;
	public static final int WS=33;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public mygrammarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public mygrammarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return mygrammarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/Anya/github/compiler-theory/mygrammar.g"; }

	public static main(String[] args) throws displayRecognitionError {
	              Lexer l = new Lexer(new ANTLRFileStream(...));
	              CommonTokenStream tokens = new CommonTokenStream(l);
	              Parser p = new Parser(tokens);
	              try {p.exp();} catch (Exception e) {System.err("Should hopefully never happen");}
	          }
	          

	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// /Users/Anya/github/compiler-theory/mygrammar.g:55:1: program : includes decls ( procedure )* main EOF ;
	public final mygrammarParser.program_return program() throws  {
		mygrammarParser.program_return retval = new mygrammarParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF5=null;
		ParserRuleReturnScope includes1 =null;
		ParserRuleReturnScope decls2 =null;
		ParserRuleReturnScope procedure3 =null;
		ParserRuleReturnScope main4 =null;

		Object EOF5_tree=null;

		try {
			// /Users/Anya/github/compiler-theory/mygrammar.g:55:9: ( includes decls ( procedure )* main EOF )
			// /Users/Anya/github/compiler-theory/mygrammar.g:55:11: includes decls ( procedure )* main EOF
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_includes_in_program560);
			includes1=includes();
			state._fsp--;

			adaptor.addChild(root_0, includes1.getTree());

			pushFollow(FOLLOW_decls_in_program562);
			decls2=decls();
			state._fsp--;

			adaptor.addChild(root_0, decls2.getTree());

			// /Users/Anya/github/compiler-theory/mygrammar.g:55:26: ( procedure )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID||LA1_0==35||LA1_0==38) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /Users/Anya/github/compiler-theory/mygrammar.g:55:27: procedure
					{
					pushFollow(FOLLOW_procedure_in_program565);
					procedure3=procedure();
					state._fsp--;

					adaptor.addChild(root_0, procedure3.getTree());

					}
					break;

				default :
					break loop1;
				}
			}

			pushFollow(FOLLOW_main_in_program569);
			main4=main();
			state._fsp--;

			adaptor.addChild(root_0, main4.getTree());

			EOF5=(Token)match(input,EOF,FOLLOW_EOF_in_program571); 
			EOF5_tree = (Object)adaptor.create(EOF5);
			adaptor.addChild(root_0, EOF5_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class args_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "args"
	// /Users/Anya/github/compiler-theory/mygrammar.g:56:1: args : ( typeident ( COMMA typeident )* )? -> ( ^( ARGS ( typeident ( typeident )* )? ) )? ;
	public final mygrammarParser.args_return args() throws  {
		mygrammarParser.args_return retval = new mygrammarParser.args_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token COMMA7=null;
		ParserRuleReturnScope typeident6 =null;
		ParserRuleReturnScope typeident8 =null;

		Object COMMA7_tree=null;
		RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");
		RewriteRuleSubtreeStream stream_typeident=new RewriteRuleSubtreeStream(adaptor,"rule typeident");

		try {
			// /Users/Anya/github/compiler-theory/mygrammar.g:56:7: ( ( typeident ( COMMA typeident )* )? -> ( ^( ARGS ( typeident ( typeident )* )? ) )? )
			// /Users/Anya/github/compiler-theory/mygrammar.g:56:9: ( typeident ( COMMA typeident )* )?
			{
			// /Users/Anya/github/compiler-theory/mygrammar.g:56:9: ( typeident ( COMMA typeident )* )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==35||LA3_0==38) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// /Users/Anya/github/compiler-theory/mygrammar.g:56:10: typeident ( COMMA typeident )*
					{
					pushFollow(FOLLOW_typeident_in_args580);
					typeident6=typeident();
					state._fsp--;

					stream_typeident.add(typeident6.getTree());
					// /Users/Anya/github/compiler-theory/mygrammar.g:56:20: ( COMMA typeident )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==COMMA) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// /Users/Anya/github/compiler-theory/mygrammar.g:56:21: COMMA typeident
							{
							COMMA7=(Token)match(input,COMMA,FOLLOW_COMMA_in_args583);  
							stream_COMMA.add(COMMA7);

							pushFollow(FOLLOW_typeident_in_args585);
							typeident8=typeident();
							state._fsp--;

							stream_typeident.add(typeident8.getTree());
							}
							break;

						default :
							break loop2;
						}
					}

					}
					break;

			}

			// AST REWRITE
			// elements: typeident, typeident
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 56:41: -> ( ^( ARGS ( typeident ( typeident )* )? ) )?
			{
				// /Users/Anya/github/compiler-theory/mygrammar.g:56:44: ( ^( ARGS ( typeident ( typeident )* )? ) )?
				if ( stream_typeident.hasNext() ) {
					// /Users/Anya/github/compiler-theory/mygrammar.g:56:44: ^( ARGS ( typeident ( typeident )* )? )
					{
					Object root_1 = (Object)adaptor.nil();
					root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ARGS, "ARGS"), root_1);
					// /Users/Anya/github/compiler-theory/mygrammar.g:56:51: ( typeident ( typeident )* )?
					if ( stream_typeident.hasNext()||stream_typeident.hasNext() ) {
						adaptor.addChild(root_1, stream_typeident.nextTree());
						// /Users/Anya/github/compiler-theory/mygrammar.g:56:61: ( typeident )*
						while ( stream_typeident.hasNext() ) {
							adaptor.addChild(root_1, stream_typeident.nextTree());
						}
						stream_typeident.reset();

					}
					stream_typeident.reset();
					stream_typeident.reset();

					adaptor.addChild(root_0, root_1);
					}

				}
				stream_typeident.reset();

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "args"


	public static class includes_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "includes"
	// /Users/Anya/github/compiler-theory/mygrammar.g:57:1: includes : ( '#include' STRING )* -> ( ^( INCLS ( STRING )* ) )? ;
	public final mygrammarParser.includes_return includes() throws  {
		mygrammarParser.includes_return retval = new mygrammarParser.includes_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal9=null;
		Token STRING10=null;

		Object string_literal9_tree=null;
		Object STRING10_tree=null;
		RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
		RewriteRuleTokenStream stream_STRING=new RewriteRuleTokenStream(adaptor,"token STRING");

		try {
			// /Users/Anya/github/compiler-theory/mygrammar.g:57:10: ( ( '#include' STRING )* -> ( ^( INCLS ( STRING )* ) )? )
			// /Users/Anya/github/compiler-theory/mygrammar.g:57:12: ( '#include' STRING )*
			{
			// /Users/Anya/github/compiler-theory/mygrammar.g:57:12: ( '#include' STRING )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==34) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /Users/Anya/github/compiler-theory/mygrammar.g:57:13: '#include' STRING
					{
					string_literal9=(Token)match(input,34,FOLLOW_34_in_includes613);  
					stream_34.add(string_literal9);

					STRING10=(Token)match(input,STRING,FOLLOW_STRING_in_includes615);  
					stream_STRING.add(STRING10);

					}
					break;

				default :
					break loop4;
				}
			}

			// AST REWRITE
			// elements: STRING
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 57:33: -> ( ^( INCLS ( STRING )* ) )?
			{
				// /Users/Anya/github/compiler-theory/mygrammar.g:57:36: ( ^( INCLS ( STRING )* ) )?
				if ( stream_STRING.hasNext() ) {
					// /Users/Anya/github/compiler-theory/mygrammar.g:57:36: ^( INCLS ( STRING )* )
					{
					Object root_1 = (Object)adaptor.nil();
					root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(INCLS, "INCLS"), root_1);
					// /Users/Anya/github/compiler-theory/mygrammar.g:57:44: ( STRING )*
					while ( stream_STRING.hasNext() ) {
						adaptor.addChild(root_1, stream_STRING.nextNode());
					}
					stream_STRING.reset();

					adaptor.addChild(root_0, root_1);
					}

				}
				stream_STRING.reset();

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "includes"


	public static class main_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "main"
	// /Users/Anya/github/compiler-theory/mygrammar.g:58:1: main : 'main' LPAREN RPAREN body -> ^( MAIN body ) ;
	public final mygrammarParser.main_return main() throws  {
		mygrammarParser.main_return retval = new mygrammarParser.main_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal11=null;
		Token LPAREN12=null;
		Token RPAREN13=null;
		ParserRuleReturnScope body14 =null;

		Object string_literal11_tree=null;
		Object LPAREN12_tree=null;
		Object RPAREN13_tree=null;
		RewriteRuleTokenStream stream_RPAREN=new RewriteRuleTokenStream(adaptor,"token RPAREN");
		RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
		RewriteRuleTokenStream stream_LPAREN=new RewriteRuleTokenStream(adaptor,"token LPAREN");
		RewriteRuleSubtreeStream stream_body=new RewriteRuleSubtreeStream(adaptor,"rule body");

		try {
			// /Users/Anya/github/compiler-theory/mygrammar.g:58:6: ( 'main' LPAREN RPAREN body -> ^( MAIN body ) )
			// /Users/Anya/github/compiler-theory/mygrammar.g:58:8: 'main' LPAREN RPAREN body
			{
			string_literal11=(Token)match(input,39,FOLLOW_39_in_main636);  
			stream_39.add(string_literal11);

			LPAREN12=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_main638);  
			stream_LPAREN.add(LPAREN12);

			RPAREN13=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_main640);  
			stream_RPAREN.add(RPAREN13);

			pushFollow(FOLLOW_body_in_main642);
			body14=body();
			state._fsp--;

			stream_body.add(body14.getTree());
			// AST REWRITE
			// elements: body
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 58:34: -> ^( MAIN body )
			{
				// /Users/Anya/github/compiler-theory/mygrammar.g:58:37: ^( MAIN body )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(MAIN, "MAIN"), root_1);
				adaptor.addChild(root_1, stream_body.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "main"


	public static class procedure_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "procedure"
	// /Users/Anya/github/compiler-theory/mygrammar.g:59:1: procedure : ( 'int' | 'char' )? ID ^ LPAREN ! args RPAREN ! body ;
	public final mygrammarParser.procedure_return procedure() throws  {
		mygrammarParser.procedure_return retval = new mygrammarParser.procedure_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set15=null;
		Token ID16=null;
		Token LPAREN17=null;
		Token RPAREN19=null;
		ParserRuleReturnScope args18 =null;
		ParserRuleReturnScope body20 =null;

		Object set15_tree=null;
		Object ID16_tree=null;
		Object LPAREN17_tree=null;
		Object RPAREN19_tree=null;

		try {
			// /Users/Anya/github/compiler-theory/mygrammar.g:59:11: ( ( 'int' | 'char' )? ID ^ LPAREN ! args RPAREN ! body )
			// /Users/Anya/github/compiler-theory/mygrammar.g:59:13: ( 'int' | 'char' )? ID ^ LPAREN ! args RPAREN ! body
			{
			root_0 = (Object)adaptor.nil();


			// /Users/Anya/github/compiler-theory/mygrammar.g:59:13: ( 'int' | 'char' )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==35||LA5_0==38) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// /Users/Anya/github/compiler-theory/mygrammar.g:
					{
					set15=input.LT(1);
					if ( input.LA(1)==35||input.LA(1)==38 ) {
						input.consume();
						adaptor.addChild(root_0, (Object)adaptor.create(set15));
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					}
					break;

			}

			ID16=(Token)match(input,ID,FOLLOW_ID_in_procedure666); 
			ID16_tree = (Object)adaptor.create(ID16);
			root_0 = (Object)adaptor.becomeRoot(ID16_tree, root_0);

			LPAREN17=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_procedure669); 
			pushFollow(FOLLOW_args_in_procedure672);
			args18=args();
			state._fsp--;

			adaptor.addChild(root_0, args18.getTree());

			RPAREN19=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_procedure674); 
			pushFollow(FOLLOW_body_in_procedure677);
			body20=body();
			state._fsp--;

			adaptor.addChild(root_0, body20.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "procedure"


	public static class typeident_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "typeident"
	// /Users/Anya/github/compiler-theory/mygrammar.g:60:1: typeident : ( 'int' ^ ID | 'char' ^ ID );
	public final mygrammarParser.typeident_return typeident() throws  {
		mygrammarParser.typeident_return retval = new mygrammarParser.typeident_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal21=null;
		Token ID22=null;
		Token string_literal23=null;
		Token ID24=null;

		Object string_literal21_tree=null;
		Object ID22_tree=null;
		Object string_literal23_tree=null;
		Object ID24_tree=null;

		try {
			// /Users/Anya/github/compiler-theory/mygrammar.g:60:11: ( 'int' ^ ID | 'char' ^ ID )
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==38) ) {
				alt6=1;
			}
			else if ( (LA6_0==35) ) {
				alt6=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// /Users/Anya/github/compiler-theory/mygrammar.g:60:13: 'int' ^ ID
					{
					root_0 = (Object)adaptor.nil();


					string_literal21=(Token)match(input,38,FOLLOW_38_in_typeident684); 
					string_literal21_tree = (Object)adaptor.create(string_literal21);
					root_0 = (Object)adaptor.becomeRoot(string_literal21_tree, root_0);

					ID22=(Token)match(input,ID,FOLLOW_ID_in_typeident687); 
					ID22_tree = (Object)adaptor.create(ID22);
					adaptor.addChild(root_0, ID22_tree);

					}
					break;
				case 2 :
					// /Users/Anya/github/compiler-theory/mygrammar.g:60:25: 'char' ^ ID
					{
					root_0 = (Object)adaptor.nil();


					string_literal23=(Token)match(input,35,FOLLOW_35_in_typeident691); 
					string_literal23_tree = (Object)adaptor.create(string_literal23);
					root_0 = (Object)adaptor.becomeRoot(string_literal23_tree, root_0);

					ID24=(Token)match(input,ID,FOLLOW_ID_in_typeident694); 
					ID24_tree = (Object)adaptor.create(ID24);
					adaptor.addChild(root_0, ID24_tree);

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "typeident"


	public static class decls_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "decls"
	// /Users/Anya/github/compiler-theory/mygrammar.g:61:1: decls : ( typeident SEMICOLON )* -> ( ^( DECS ( typeident )* ) )? ;
	public final mygrammarParser.decls_return decls() throws  {
		mygrammarParser.decls_return retval = new mygrammarParser.decls_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token SEMICOLON26=null;
		ParserRuleReturnScope typeident25 =null;

		Object SEMICOLON26_tree=null;
		RewriteRuleTokenStream stream_SEMICOLON=new RewriteRuleTokenStream(adaptor,"token SEMICOLON");
		RewriteRuleSubtreeStream stream_typeident=new RewriteRuleSubtreeStream(adaptor,"rule typeident");

		try {
			// /Users/Anya/github/compiler-theory/mygrammar.g:61:8: ( ( typeident SEMICOLON )* -> ( ^( DECS ( typeident )* ) )? )
			// /Users/Anya/github/compiler-theory/mygrammar.g:61:10: ( typeident SEMICOLON )*
			{
			// /Users/Anya/github/compiler-theory/mygrammar.g:61:10: ( typeident SEMICOLON )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==38) ) {
					int LA7_1 = input.LA(2);
					if ( (LA7_1==ID) ) {
						int LA7_4 = input.LA(3);
						if ( (LA7_4==SEMICOLON) ) {
							alt7=1;
						}

					}

				}
				else if ( (LA7_0==35) ) {
					int LA7_3 = input.LA(2);
					if ( (LA7_3==ID) ) {
						int LA7_5 = input.LA(3);
						if ( (LA7_5==SEMICOLON) ) {
							alt7=1;
						}

					}

				}

				switch (alt7) {
				case 1 :
					// /Users/Anya/github/compiler-theory/mygrammar.g:61:11: typeident SEMICOLON
					{
					pushFollow(FOLLOW_typeident_in_decls703);
					typeident25=typeident();
					state._fsp--;

					stream_typeident.add(typeident25.getTree());
					SEMICOLON26=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_decls705);  
					stream_SEMICOLON.add(SEMICOLON26);

					}
					break;

				default :
					break loop7;
				}
			}

			// AST REWRITE
			// elements: typeident
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 61:33: -> ( ^( DECS ( typeident )* ) )?
			{
				// /Users/Anya/github/compiler-theory/mygrammar.g:61:36: ( ^( DECS ( typeident )* ) )?
				if ( stream_typeident.hasNext() ) {
					// /Users/Anya/github/compiler-theory/mygrammar.g:61:36: ^( DECS ( typeident )* )
					{
					Object root_1 = (Object)adaptor.nil();
					root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DECS, "DECS"), root_1);
					// /Users/Anya/github/compiler-theory/mygrammar.g:61:43: ( typeident )*
					while ( stream_typeident.hasNext() ) {
						adaptor.addChild(root_1, stream_typeident.nextTree());
					}
					stream_typeident.reset();

					adaptor.addChild(root_0, root_1);
					}

				}
				stream_typeident.reset();

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "decls"


	public static class stmt_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "stmt"
	// /Users/Anya/github/compiler-theory/mygrammar.g:62:1: stmt : ( LBRACE ! stmtlist RBRACE !| 'while' LPAREN exp RPAREN stmt -> ^( 'while' ^( EXPR exp ) stmt ) | 'if' LPAREN exp RPAREN s= stmt ( options {greedy=true; } : 'else' s2= stmt )? -> ^( 'if' ^( EXPR exp ) $s ( ^( 'else' $s2) )? ) | ID ASSIGN ^ lexp SEMICOLON !| ( 'read' | 'readc' | 'output' | 'outputc' ) ^ LPAREN ! ID RPAREN ! SEMICOLON !| 'print' ^ LPAREN ! STRING RPAREN ! SEMICOLON !| 'return' ^ ( lexp )? SEMICOLON !| ID ^ LPAREN ! ID ( COMMA ! ID )* RPAREN ! SEMICOLON !);
	public final mygrammarParser.stmt_return stmt() throws  {
		mygrammarParser.stmt_return retval = new mygrammarParser.stmt_return();
		retval.start = input.LT(1);

		Object root_0 = null;
